[project]
name = "hubitat"
version = "0.10.3"
description = "A Hubitat integration for Home Assistant"
authors = [{ name = "Jason Cheatham", email = "jason@jasoncheatham.com" }]
requires-python = ">=3.14.2"
license = { text = "MIT" }
dependencies = [
    "homeassistant>=2025.9.0",
]

[project.urls]
homepage = "https://github.com/jason0x43/hacs-hubitat"

[project.optional-dependencies]

[tool.taskipy.tasks]
lint = "ty check"
test = "pytest tests"
pub = "python scripts/publish.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:Inheritance class HomeAssistantApplication:DeprecationWarning",
    "ignore:.*asyncio\\.iscoroutinefunction.*:DeprecationWarning:litellm\\.litellm_core_utils\\.logging_utils",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit<3.0.0,>=2.4.0",
    "homeassistant==2026.4.2",
    "pytest-asyncio>=0.16.0",
    "setuptools>=62.2.0",
    "tomlkit>=0.12.3",
    "taskipy>=1.14.1",
    "ty>=0.0.7",
]

[tool.ruff.lint]
select = ["E", "W", "F", "PYI", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true
force-wrap-aliases = true
known-first-party = ["homeassistant", "tests"]
forced-separate = ["tests"]
