[project]
name = "hubitat"
version = "0.10.4"
description = "A Hubitat integration for Home Assistant"
authors = [{ name = "Jason Cheatham", email = "jason@jasoncheatham.com" }]
requires-python = ">=3.14.2"
license = { text = "MIT" }
dependencies = [
    "homeassistant>=2025.9.0",
]

[project.urls]
homepage = "https://github.com/jason0x43/hacs-hubitat"

[project.optional-dependencies]

[tool.run-script]
lint = "zuban check"
format = "ruff format"
test = "pytest tests"
pub = "python scripts/publish.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:Inheritance class HomeAssistantApplication:DeprecationWarning",
    "ignore:.*asyncio\\.iscoroutinefunction.*:DeprecationWarning:litellm\\.litellm_core_utils\\.logging_utils",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit>=3.0.0",
    "homeassistant",
    "pytest-homeassistant-custom-component",
    "pytest-asyncio>=0.16.0",
    "setuptools>=62.2.0",
    "tomlkit>=0.12.3",
    "zuban>=0.7.0",
    "pytest-cov>=7.1.0",
    "uvtask>=0.9.0",
]

[tool.ruff.lint]
select = ["E", "W", "F", "PYI", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true
force-wrap-aliases = true
known-first-party = ["homeassistant", "tests"]
forced-separate = ["tests"]
