[project]
name = "hubitat"
version = "0.10.4"
description = "A Hubitat integration for Home Assistant"
authors = [{ name = "Jason Cheatham", email = "jason@jasoncheatham.com" }]
requires-python = ">=3.14.2"
license = { text = "MIT" }
dependencies = [
    "homeassistant>=2025.9.0",
]

[project.urls]
homepage = "https://github.com/jason0x43/hacs-hubitat"

[project.optional-dependencies]

[tool.poe]
verbosity = -1

[tool.poe.tasks]
_typecheck.shell = "zuban check"
_typecheck.env = { CLICOLOR_FORCE = '1' }
_lint.shell = "ruff check"
_lint.env = { CLICOLOR_FORCE = '1' }
_formatting.shell = "ruff format --check"
_formatting.env = { CLICOLOR_FORCE = '1' }
check.parallel = ["_typecheck", "_lint", "_formatting"]
check.ignore_fail = 'return_non_zero'
format = "ruff format"
test = "pytest tests"
smoke = "python scripts/smoke_test.py"
pub = "python scripts/publish.py"
version = "python scripts/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:Inheritance class HomeAssistantApplication:DeprecationWarning",
    "ignore:.*asyncio\\.iscoroutinefunction.*:DeprecationWarning:litellm\\.litellm_core_utils\\.logging_utils",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit>=3.0.0",
    "homeassistant",
    "pytest-homeassistant-custom-component",
    "pytest-asyncio>=0.16.0",
    "setuptools>=62.2.0",
    "tomlkit>=0.12.3",
    "zuban>=0.7.0",
    "pytest-cov>=7.1.0",
    "poethepoet>=0.47.0",
]

[tool.ruff.lint]
select = ["E", "W", "F", "PYI", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true
force-wrap-aliases = true
known-first-party = ["homeassistant", "tests"]
forced-separate = ["tests"]
